--- a/src/app/index.module.css
+++ b/src/app/index.module.css
@@ -22,7 +22,7 @@
 
 .filmList {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 27px;
   margin: 0;
