--- a/src/app/film/[id]/Film.module.css
+++ b/src/app/film/[id]/Film.module.css
@@ -69,3 +69,10 @@
   margin-left: 0;
   margin-right: 2px;
 }
+
+.favoriteText {
+  display: inline-block;
+  font-weight: 400;
+  margin-left: 7px;
+  vertical-align: 2px;
+}
